data access configuration

--- a/ProEvents/Back/src/ProEvents.API/appsettings.json
+++ b/ProEvents/Back/src/ProEvents.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=ProEvents.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
