--- a/ProEvents/Front/ProEvents-App/package.json
+++ b/ProEvents/Front/ProEvents-App/package.json
@@ -16,10 +16,16 @@
     "@angular/compiler": "~11.1.1",
     "@angular/core": "~11.1.1",
     "@angular/forms": "~11.1.1",
+    "@angular/localize": "~11.1.1",
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
+    "@fortawesome/fontawesome-free": "^7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "bootstrap": "^4.5.0",
+    "ngx-bootstrap": "^20.0.1",
     "rxjs": "~6.6.0",
+    "save": "^2.9.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
