--- a/ProEvents/Back/src/ProEvents.Application/ProEvents.Application.csproj
+++ b/ProEvents/Back/src/ProEvents.Application/ProEvents.Application.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProEvents.Domain\ProEvents.Domain.csproj" />
+    <ProjectReference Include="..\ProEvents.Infrastructure\ProEvents.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
