--- a/ProEvents/Front/ProEvents-App/package.json
+++ b/ProEvents/Front/ProEvents-App/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "bootstrap": "^4.5.0",
     "ngx-bootstrap": "^7.0.0",
+    "ngx-spinner": "^11.0.2",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "save": "^2.9.0",
