--- a/ProEvents/Front/ProEvents-App/package.json
+++ b/ProEvents/Front/ProEvents-App/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "bootstrap": "^4.5.0",
+    "bootswatch": "^4.5.0",
     "ngx-bootstrap": "^7.0.0",
     "ngx-spinner": "^11.0.2",
     "ngx-toastr": "^13.2.0",
