update dotnet version to 9.0.305 and change database to firebird

--- a/ProEvents/Back/src/ProEvents.API/appsettings.json
+++ b/ProEvents/Back/src/ProEvents.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ProEvents.db"
+    "DefaultConnection": "database=localhost:pro-events.fdb;user=SYSDBA;password=masterkey"
   },
   "Logging": {
     "LogLevel": {
